<resources>
    <string name="app_name">Shift Rota</string>
    <string name="klein">KLEIN</string>
    <string name="no_data">No Data</string>
    <string name="hours">Hours</string>
    <string name="minutes_00">00</string>

    <!-- Strings for hours drop-down Spinner -->
    <string name="will_work">Work</string>
    <string name="have_worked">Worked</string>
    <string name="holiday">Holiday</string>
    <string name="cancel">Clear</string>
    <string name="notes">Notes</string>
    <string name="cant_book_in_the_past">You can\'t check that you\'ll work in the Past…</string>
    <string name="change_status_or_date_in_future">Please change Status or select a date in the Future</string>
    <string name="cant_book_in_the_future">You can\'t check that you have worked in the Future…</string>
    <string name="change_status_or_date_in_past">Please change Status or select a date in the Past</string>
    <string name="total_worked_hours">Total worked hours&#160;</string>
    <string name="hours_worked_sum">%s hrs</string>
    <string name="booked_hours_left">Booked hours left&#160;</string>
    <string name="days_selected_sum">%s Selected</string>


    <string name="total_worked_hours_smaller">H.W.&#160;</string>
    <string name="booked_hours_left_smaller">H.L.&#160;</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="save">SAVE</string>

    <string name="number_picker_formatter">%02d</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="status">Status</string>
    <string name="set_status">Set Status</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add_break">Add Break</string>
    <string name="minutes">minutes</string>
</resources>
