<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_will_work"
        android:icon="@drawable/ic_subject"
        android:title="@string/will_work"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_have_worked"
        android:icon="@drawable/ic_schedule"
        android:title="@string/have_worked"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_holiday"
        android:icon="@drawable/ic_subject"
        android:title="@string/holiday"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/ic_schedule"
        android:title="@string/cancel"
        app:showAsAction="never" />

</menu>