<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EEEEEE"
    android:padding="4dp">

    <TextView
        android:id="@+id/month_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/month_shape"
        android:elevation="4dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        tools:text="Title" />

    <LinearLayout
        android:id="@+id/week_text_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_below="@id/month_text_view"
        android:padding="2dp">

        <TextView
            android:id="@+id/monday_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:textSize="16sp"
            android:gravity="center"
            android:text="M" />

        <TextView
            android:id="@+id/tuesday_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:textSize="16sp"
            android:gravity="center"
            android:text="T" />

        <TextView
            android:id="@+id/wednesday_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:textSize="16sp"
            android:gravity="center"
            android:text="W" />

        <TextView
            android:id="@+id/thursday_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:textSize="16sp"
            android:gravity="center"
            android:text="T" />

        <TextView
            android:id="@+id/friday_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:textSize="16sp"
            android:gravity="center"
            android:text="F" />

        <TextView
            android:id="@+id/saturday_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:textSize="16sp"
            android:gravity="center"
            android:text="S"/>

        <TextView
            android:id="@+id/sunday_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:textSize="16sp"
            android:gravity="center"
            android:text="S"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/week_text_views"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/recycler_view_shape" />


    <RelativeLayout
        android:id="@+id/hidden_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_view"
        android:background="@drawable/hidden_layout_shape"
        android:elevation="8dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="Title" />

        <ImageView
            android:id="@+id/save_image_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:alpha="0.6"
            android:background="@drawable/ic_check" />

        <!--<LinearLayout-->
            <!--android:id="@+id/status_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/title_text_view"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:orientation="horizontal">-->

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_button_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_text_view"
                android:layout_alignParentStart="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/will_work_text_view"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/will_work"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/have_worked_text_view"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_worked"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/holiday_text_view"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holiday"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_text_view"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <!--<ImageView-->
            <!--android:id="@+id/holiday_text_view"-->
            <!--android:layout_width="27dp"-->
            <!--android:layout_height="27dp"-->
            <!--android:layout_marginStart="4dp"-->
            <!--android:elevation="4dp"-->
            <!--android:layout_toEndOf="@id/have_worked_text_view"-->
            <!--android:background="@drawable/holiday_circle" />-->
        <!--</LinearLayout>-->


        <LinearLayout
            android:id="@+id/hours_notes_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toggle_button_group"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:hint="@string/hours">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hours_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notes_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/hours_worked_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hidden_linear_layout"
        android:layout_marginTop="8dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/hours_worked_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hidden_linear_layout"
        android:layout_toEndOf="@id/hours_worked_text_view"
        android:layout_marginTop="8dp"
        tools:text="31"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/hours_booked_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hours_worked_text_view"
        android:layout_marginTop="8dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/hours_booked_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hours_worked_number_text_view"
        android:layout_toEndOf="@id/hours_booked_text_view"
        android:layout_marginTop="8dp"
        tools:text="31"
        android:textSize="18sp"/>

</RelativeLayout>